--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@types/styled-components": "^5.1.3",
     "@types/typography": "^0.16.3",
+    "babel-plugin-styled-components": "^1.11.1",
+    "dlv": "^1.1.3",
     "gatsby": "^2.24.54",
     "gatsby-image": "^2.4.17",
     "gatsby-plugin-manifest": "^2.4.28",
     "gatsby-plugin-offline": "^3.2.27",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.32",
+    "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-typography": "^2.5.10",
     "gatsby-source-filesystem": "^2.3.28",
     "gatsby-transformer-sharp": "^2.5.14",
@@ -20,14 +24,22 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-typography": "^0.16.19",
+    "styled-components": "^5.2.0",
+    "styled-icons": "^10.19.0",
     "styled-media-query": "^2.1.2",
-    "typography": "^0.16.19"
+    "typeface-cabin": "0.0.72",
+    "typeface-inter": "^3.15.0",
+    "typeface-roboto-slab": "^1.1.4",
+    "typography": "^0.16.19",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^9.1.2",
+    "@types/dlv": "^1.1.2",
     "@types/react": "^16.9.49",
     "@types/react-helmet": "^6.1.0",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
     "eslint": "^7.8.1",
