--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@types/styled-components": "^5.1.3",
     "@types/typography": "^0.16.3",
+    "@vime/react": "^3.0.2",
     "babel-plugin-styled-components": "^1.11.1",
     "dlv": "^1.1.3",
     "gatsby": "^2.24.54",
